# chemistry-augmented-reality

./: .gitignore  README.md  pyproject.toml  requirements.txt
chemistry_ar/: _window.py  camera.py  chemistry-ar.py  cluster.py  levels.py  marker.py  molecule.py  speech.py  utils.py
chemistry_ar/data/: atoms.toml  levels.toml  levels.yaml
chemistry_ar/shapes/: cube.py  rectangle.py  sphere.py
chemistry_ar/users/: db.py  models.py
